// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with icon 1`] = `
<span
  className="NewTabLink"
>
  <a
    href="https://logion.network"
    rel="noreferrer"
    target="_blank"
  >
    Some text
    <img
      alt="loc"
      height="30px"
      src="/assets/loc.svg"
    />
  </a>
</span>
`;

exports[`renders without icon 1`] = `
<span
  className="NewTabLink"
>
  <a
    href="https://logion.network"
    rel="noreferrer"
    target="_blank"
  >
    Some text
  </a>
</span>
`;
